# eBet-Stream

./: .gitignore  .replit  README.md  bash.exe.stackdump  fix_translations.py  pyproject.toml  replit.md
attached_assets/: Pasted-CSGO-2-CSGO-2-Counter-Strike-2-The-successor-to-Counter-Strike-Global-Offensive-a-competitive--1758126628171_1758126628178.txt  content-1758032444675.md
eBetStream/: .env  VIP_CONDITIONS_README.md  cookies.txt  cookies_en.txt  cookies_es.txt  cookies_fr.txt  db.sqlite3  fix_bettype_game_id.py  fix_uuid.py  manage.py  package-lock.json  package.json  requirements.txt  settings.py  test_vip_conditions.py  urls.py  wsgi.py
eBetStream/betting/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
eBetStream/blog/: admin.py  forms.py  models.py  urls.py  views.py
eBetStream/clans/: apps.py  models.py  urls.py
eBetStream/clans_gaming/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eBetStream/core/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
eBetStream/eBetStream/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
eBetStream/evenements/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eBetStream/forum/: admin.py  forms.py  models.py  urls.py  views.py
eBetStream/gameurs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eBetStream/partenaires/: admin.py  apps.py  models.py  urls.py  views.py
eBetStream/static/: manifest.json
eBetStream/streaming/: admin.py  models.py  urls.py  views.py
eBetStream/templates/: base.html
ebetenv/: pyvenv.cfg
(+137 files in other folders)
