[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-crispy-forms>=2.4",
    "django>=4.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "crispy-bootstrap5>=2025.6",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.10.0",
    "django-widget-tweaks>=1.5.0",
]
